# web3_profile

./: pyproject.toml
contract/basic_class/: contract_basic_class.py
contract/contract/: convex.py  erc_20.py  gmx_reader.py
contract/contract/multichain_adderss_getter/: gmx.py  multichain_adderss_getter_basic_class.py
contract/dto/: chain.py  contract_basic.py
contract/dto/protocol_address/: gmx.py
contract/enum/: chain_id_enum.py
contract/protocol/gmx/: glp.py
contract/sample/: multicall_sample_simple.py  multicall_sample_simple_arb.py  w3_sample.py
