[tool.poetry]
name = "web3-profile"
version = "0.1.0"
description = ""
authors = ["LJ Li <ljli@xrex.io>"]
readme = "README.md"
packages = [{include = "web3_profile"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
multicall = "^0.7.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
